# FlowerHubApps

./: README.md  publish_apps.sh  run_apps.sh
apps/: test_bf16.py  test_bnb.py  test_ray.py
apps/mistral-7b-instruct-v0.3-medical/: README.md  pyproject.toml
apps/phi-4-mini-instruct-coding/: README.md  pyproject.toml
apps/phi-4-mini-instruct-coding/flowertune_llm_coding/: server_app.py
apps/phi-4-nlp/: README.md  pyproject.toml
apps/phi-4-nlp/flowertune_nlp/: models.py
apps/qwen2.5-0.5b-instruct-coding/: README.md  pyproject.toml
apps/qwen2.5-1.5b-instruct-coding/: README.md  pyproject.toml
apps/qwen2.5-1.5b-instruct-coding/flowertune_llm_coding/: models.py
apps/qwen2.5-7b-instruct-coding/: README.md  pyproject.toml
apps/qwen2.5-7b-instruct-coding/flowertune_llm_coding/: client_app.py
apps/qwen2.5-7b-instruct-medical/: README.md  pyproject.toml
apps/qwen2.5-7b-instruct-medical/flowertune_med/: models.py
apps/qwen3-0.6b-medical/: README.md  pyproject.toml
apps/qwen3-0.6b-medical/flowertune_llm_medical/: client_app.py  dataset.py
apps/qwen3-4b-coding/: README.md  pyproject.toml
apps/qwen3-4b-coding/flowertune_llm_coding/: models.py  server_app.py  strategy.py
apps/qwen3-8b-coding/: README.md  pyproject.toml
apps/qwen3-8b-coding/flowertune_llm_coding/: models.py
apps/smollm2-1.7b-instruct-coding/: README.md  pyproject.toml
apps/smollm2-1.7b-instruct-coding/flowertune_llm_coding/: models.py  strategy.py
apps/smollm2-1.7b-instruct-finance/: README.md  pyproject.toml
apps/smollm2-1.7b-instruct-finance/flowertune_finance/: client_app.py  models.py  server_app.py  strategy.py
apps/smollm2-360m-instruct-finance/: README.md  pyproject.toml
