[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowertune_mistral-7b-instruct-v0.3-medical"
version = "1.0.0"
description = "FlowerTune LLM Labs"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "flwr[simulation]>=1.15.0",
    "flwr-datasets>=0.3.0",
    "torch==2.10.0",
    "transformers==4.51.3",
    "trl==0.8.1",
    "peft==0.14.0",
    "bitsandbytes==0.45.5",
    "kernels>=0.11.1",
    "omegaconf==2.3.0",
    "sentencepiece==0.2.0",
]

[project.optional-dependencies]
rocm = [
    "pytorch-triton-rocm==3.5.1",
    "triton-rocm==3.6.0",
]


[tool.hatch.build.targets.wheel]
packages = ["flowertune_med"]

[tool.flwr.app]
publisher = "mrs83"

[tool.flwr.app.components]
serverapp = "flowertune_med.server_app:app"
clientapp = "flowertune_med.client_app:app"

[tool.flwr.app.config]
model.name = "mistralai/Mistral-7B-Instruct-v0.3"
model.quantization = 4
model.gradient-checkpointing = true
model.lora.peft-lora-r = 8
model.lora.peft-lora-alpha = 32
train.save-every-round = 1
train.learning-rate-max = 5e-5
train.learning-rate-min = 1e-6
train.seq-length = 512
train.training-arguments.output-dir = ""
train.training-arguments.learning-rate = ""
train.training-arguments.per-device-train-batch-size = 8
train.training-arguments.gradient-accumulation-steps = 1
train.training-arguments.logging-steps = 1
train.training-arguments.num-train-epochs = 3
train.training-arguments.max-steps = 6
train.training-arguments.warmup-steps = 2
train.training-arguments.save-steps = 1000
train.training-arguments.save-total-limit = 10
train.training-arguments.max-grad-norm = 1.0
train.training-arguments.gradient-checkpointing = true
train.training-arguments.lr-scheduler-type = "constant_with_warmup"
train.training-arguments.fp16 = false
train.training-arguments.bf16 = true
train.training-arguments.tf32 = false
train.training-arguments.optim = "paged_adamw_8bit"
strategy.fraction-fit = 0.15
strategy.fraction-evaluate = 0.0
num-server-rounds = 1

[tool.flwr.app.config.static]
dataset.name = "medalpaca/medical_meadow_medical_flashcards"
