[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowertune_qwen2.5-0.5b-instruct-coding"
version = "1.0.3"
description = "FlowerTune LLM Labs"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]>=1.15.0",
    "flwr-datasets>=0.3.0",
    "torch==2.10.0",
    "transformers==4.50.0",
    "trl==0.8.1",
    "peft==0.14.0",
    "bitsandbytes>=0.49.2",
    "kernels>=0.11.1",
    "omegaconf==2.3.0",
]

[project.optional-dependencies]
rocm = [
    "pytorch-triton-rocm==3.5.1",
    "triton-rocm==3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["flowertune_llm_coding"]

[tool.flwr.app]
publisher = "mrs83"

[tool.flwr.app.components]
serverapp = "flowertune_llm_coding.server_app:app"
clientapp = "flowertune_llm_coding.client_app:app"

[tool.flwr.app.config]
model.name = "Qwen/Qwen2.5-0.5B-Instruct"
model.quantization = 4
model.gradient-checkpointing = true
model.lora.peft-lora-r = 16
model.lora.peft-lora-alpha = 64
model.lora.peft-use-dora = true
train.save-every-round = 1
train.learning-rate-max = 5e-5
train.learning-rate-min = 5e-6
train.seq-length = 512
train.training-arguments.output-dir = ""
train.training-arguments.learning-rate = ""
train.training-arguments.per-device-train-batch-size = 8
train.training-arguments.gradient-accumulation-steps = 1
train.training-arguments.logging-steps = 1
train.training-arguments.num-train-epochs = 3
train.training-arguments.max-steps = 10
train.training-arguments.save-steps = 1000
train.training-arguments.save-total-limit = 10
train.training-arguments.max-grad-norm = 1.0
train.training-arguments.gradient-checkpointing = true
train.training-arguments.bf16 = true
train.training-arguments.tf32 = false
train.training-arguments.optim = "paged_adamw_8bit"
train.training-arguments.lr-scheduler-type = "constant"
strategy.fraction-fit = 0.6
strategy.fraction-evaluate = 0.0
# Standard round for verification
num-server-rounds = 1

[tool.flwr.app.config.static]
dataset.name = "flwrlabs/code-alpaca-20k"
