[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowertune_qwen2.5-7b-instruct-medical"
version = "1.0.0"
description = "FlowerTune LLM Labs"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]>=1.15.0",
    "torch>=2.6.0",
    "transformers==4.50.0",
    "trl==0.8.1",
    "peft==0.14.0",
    "bitsandbytes>=0.49.2",
    "flwr-datasets>=0.3.0",
    "scipy==1.13.0",
    "sentencepiece==0.2.0",
    "omegaconf==2.3.0",
    "hf_transfer==0.1.8",
]

[project.optional-dependencies]
rocm = [
    "pytorch-triton-rocm==3.5.1",
    "triton-rocm==3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["flowertune_med"]

[tool.flwr.app]
publisher = "mrs83"

[tool.flwr.app.components]
serverapp = "flowertune_med.server_app:app"
clientapp = "flowertune_med.client_app:app"

[tool.flwr.app.config]
# Standard round for verification
num-server-rounds = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 1.0
