[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowertune_smollm2-1.7b-instruct-coding"
version = "1.0.0"
description = "FlowerTune LLM Labs - Coding"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "flwr[simulation]>=1.15.0",
    "flwr-datasets>=0.3.0",
    "torch==2.10.0",
    "transformers==4.51.3",
    "trl==0.8.1",
    "peft==0.14.0",
    "bitsandbytes==0.45.5",
    "kernels>=0.11.1",
    "omegaconf==2.3.0",
    "sentencepiece==0.2.0",
]

[project.optional-dependencies]
rocm = [
    "pytorch-triton-rocm==3.5.1",
    "triton-rocm==3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["flowertune_llm_coding"]

[tool.flwr.app]
publisher = "mrs83"

[tool.flwr.app.components]
serverapp = "flowertune_llm_coding.server_app:app"
clientapp = "flowertune_llm_coding.client_app:app"

[tool.flwr.app.config]
# Standard round for verification
num-server-rounds = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 1.0
